<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="max_quant_toast">Quantity limit 100 units!</string>
    <string name="order_sumary_name">Name: <xliff:g example="Vinicius" id="name">%s</xliff:g></string>
    <string name="order_sumary_whipped_cream">Whipped Cream <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>
    <string name="order_sumary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
    <string name="order_sumary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_sumary_total">Total: $<xliff:g example="10" id="total">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="email_subject">JustJava order for <xliff:g example="vinicius" id="name">%s</xliff:g></string>
</resources>

